src/pre_push/publication_attempt/plan/snapshots/gherrit__pre_push__publication_attempt__plan__tests__acknowledged_publication_effects.snap
---
source: src/pre_push/publication_attempt/plan/tests.rs
expression: acknowledged.attempts
---
- InitialRefs:
    - options:
        - "--porcelain"
        - "--atomic"
        - "--no-follow-tags"
        - "--recurse-submodules=no"
        - "--no-signed"
        - "--force-with-lease=refs/heads/Gfresh:"
        - "--force-with-lease=refs/heads/gherrit-bases/Gfresh:"
        - "--force-with-lease=refs/tags/gherrit/Gfresh/v1:"
        - "--force-with-lease=refs/heads/release-candidate:"
      refspecs:
        - "0000000000000000000000000000000000000014:refs/heads/Gfresh"
        - "000000000000000000000000000000000000000a:refs/heads/gherrit-bases/Gfresh"
        - "0000000000000000000000000000000000000014:refs/tags/gherrit/Gfresh/v1"
        - "0000000000000000000000000000000000000014:refs/heads/release-candidate"
- Creates:
    - id: Gfresh
      title: Title for Gfresh
      body:
        - "<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->"
        - ""
        - Body for Gfresh.
        - ""
        - Second paragraph for Gfresh.
        - ""
        - "---"
        - ""
        - "This PR is on branch [release\\-candidate](/owner/repo/tree/release-candidate)."
        - ""
        - ""
        - "<details>"
        - "<summary><strong>⬇️ Download this PR</strong></summary>"
        - ""
        - "######"
        - ""
        - "**Branch**"
        - "```bash"
        - git fetch origin refs/heads/Gfresh && git checkout -b pr-Gfresh FETCH_HEAD
        - "```"
        - ""
        - "**Checkout**"
        - "```bash"
        - git fetch origin refs/heads/Gfresh && git checkout FETCH_HEAD
        - "```"
        - ""
        - "**Cherry Pick**"
        - "```bash"
        - git fetch origin refs/heads/Gfresh && git cherry-pick FETCH_HEAD
        - "```"
        - ""
        - "**Pull**"
        - "```bash"
        - git pull origin refs/heads/Gfresh
        - "```"
        - ""
        - "</details>"
        - ""
        - "*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*"
      head: "0000000000000000000000000000000000000014"
      base: 000000000000000000000000000000000000000a
- Markers:
    - options:
        - "--porcelain"
        - "--atomic"
        - "--no-follow-tags"
        - "--recurse-submodules=no"
        - "--no-signed"
        - "--force-with-lease=refs/tags/gherrit/Gfresh/pr:"
      refspecs:
        - "0000000000000000000000000000000000000014:refs/tags/gherrit/Gfresh/pr"
- Projection:
    - Update:
        number: 100
        node_id: CREATED_PULL_REQUEST_100
        title: ~
        body:
          - "<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->"
          - ""
          - Body for Gfresh.
          - ""
          - Second paragraph for Gfresh.
          - ""
          - "---"
          - ""
          - "This PR is on branch [release\\-candidate](/owner/repo/tree/release-candidate)."
          - ""
          - "- 👉 #100"
          - ""
          - "<details>"
          - "<summary><strong>⬇️ Download this PR</strong></summary>"
          - ""
          - "######"
          - ""
          - "**Branch**"
          - "```bash"
          - git fetch origin refs/heads/Gfresh && git checkout -b pr-Gfresh FETCH_HEAD
          - "```"
          - ""
          - "**Checkout**"
          - "```bash"
          - git fetch origin refs/heads/Gfresh && git checkout FETCH_HEAD
          - "```"
          - ""
          - "**Cherry Pick**"
          - "```bash"
          - git fetch origin refs/heads/Gfresh && git cherry-pick FETCH_HEAD
          - "```"
          - ""
          - "**Pull**"
          - "```bash"
          - git pull origin refs/heads/Gfresh
          - "```"
          - ""
          - "</details>"
          - ""
          - "*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*"
        base_branch: main
