src/pre_push/publication_attempt/plan/snapshots/gherrit__pre_push__publication_attempt__plan__tests__all_existing_publication_effects.snap
---
source: src/pre_push/publication_attempt/plan/tests.rs
expression: driver.attempts
---
- InitialRefs:
    - options:
        - "--porcelain"
        - "--atomic"
        - "--no-follow-tags"
        - "--recurse-submodules=no"
        - "--no-signed"
        - "--force-with-lease=refs/heads/Gexisting:0000000000000000000000000000000000000065"
        - "--force-with-lease=refs/heads/gherrit-bases/Gexisting:000000000000000000000000000000000000000a"
        - "--force-with-lease=refs/tags/gherrit/Gexisting/v2:"
      refspecs:
        - "0000000000000000000000000000000000000014:refs/heads/Gexisting"
        - "000000000000000000000000000000000000000a:refs/heads/gherrit-bases/Gexisting"
        - "0000000000000000000000000000000000000014:refs/tags/gherrit/Gexisting/v2"
- Markers:
    - options:
        - "--porcelain"
        - "--atomic"
        - "--no-follow-tags"
        - "--recurse-submodules=no"
        - "--no-signed"
        - "--force-with-lease=refs/tags/gherrit/Gexisting/pr:"
      refspecs:
        - "0000000000000000000000000000000000000014:refs/tags/gherrit/Gexisting/pr"
- Updates:
    - number: 7
      node_id: PR_7
      title: ~
      body:
        - "<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->"
        - ""
        - Body for Gexisting.
        - ""
        - Second paragraph for Gexisting.
        - ""
        - "---"
        - ""
        - "- 👉 #7"
        - ""
        - ""
        - "**Latest Update:** v2 — [Compare vs v1](/owner/repo/compare/gherrit/Gexisting/v1..gherrit/Gexisting/v2)"
        - ""
        - "<details>"
        - "<summary><strong>📚 Full Patch History</strong></summary>"
        - ""
        - "*Links show the diff between the row version and the column version.*"
        - ""
        - "|Version| v1 |Base|"
        - "|:---|:---|:---|"
        - "|v2|[vs v1](/owner/repo/compare/gherrit/Gexisting/v1..gherrit/Gexisting/v2)|[vs Base](/owner/repo/compare/000000000000000000000000000000000000000a...gherrit/Gexisting/v2)|"
        - "|v1||[vs Base](/owner/repo/compare/000000000000000000000000000000000000000a...gherrit/Gexisting/v1)|"
        - ""
        - "</details>"
        - "<details>"
        - "<summary><strong>⬇️ Download this PR</strong></summary>"
        - ""
        - "######"
        - ""
        - "**Branch**"
        - "```bash"
        - git fetch origin refs/heads/Gexisting && git checkout -b pr-Gexisting FETCH_HEAD
        - "```"
        - ""
        - "**Checkout**"
        - "```bash"
        - git fetch origin refs/heads/Gexisting && git checkout FETCH_HEAD
        - "```"
        - ""
        - "**Cherry Pick**"
        - "```bash"
        - git fetch origin refs/heads/Gexisting && git cherry-pick FETCH_HEAD
        - "```"
        - ""
        - "**Pull**"
        - "```bash"
        - git pull origin refs/heads/Gexisting
        - "```"
        - ""
        - "</details>"
        - ""
        - "*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*"
      base_branch: main
