src/pre_push/publication_attempt/plan/snapshots/gherrit__pre_push__publication_attempt__plan__tests__duplicate_repair_after_marker.snap
---
source: src/pre_push/publication_attempt/plan/tests.rs
expression: acknowledged.attempts
---
- Markers:
    - id: Gduplicates
      v1: "0000000000000000000000000000000000000014"
      number: 10
- Projection:
    - Close:
        number: 20
        node_id: PR_20
    - Update:
        number: 10
        node_id: PR_10
        title: Title for Gduplicates
        body:
          - "<!-- WARNING: This PR description is automatically generated by GHerrit. Any manual edits will be overwritten on the next push. -->"
          - ""
          - Body for Gduplicates.
          - ""
          - Second paragraph for Gduplicates.
          - ""
          - "---"
          - ""
          - "- 👉 #10"
          - ""
          - "<details>"
          - "<summary><strong>⬇️ Download this PR</strong></summary>"
          - ""
          - "######"
          - ""
          - "**Branch**"
          - "```bash"
          - "git fetch https://github.com/owner/repo.git refs/heads/Gduplicates && git checkout -b pr-Gduplicates FETCH_HEAD"
          - "```"
          - ""
          - "**Checkout**"
          - "```bash"
          - "git fetch https://github.com/owner/repo.git refs/heads/Gduplicates && git checkout FETCH_HEAD"
          - "```"
          - ""
          - "**Cherry Pick**"
          - "```bash"
          - "git fetch https://github.com/owner/repo.git refs/heads/Gduplicates && git cherry-pick FETCH_HEAD"
          - "```"
          - ""
          - "**Pull**"
          - "```bash"
          - "git pull https://github.com/owner/repo.git refs/heads/Gduplicates"
          - "```"
          - ""
          - "</details>"
          - ""
          - "*Stacked PRs enabled by [GHerrit](https://github.com/joshlf/gherrit).*"
        base_branch: main
